--- a/obot_g474/Makefile
+++ b/obot_g474/Makefile
@@ -5,19 +5,15 @@
 
 $(shell touch version.h)
 
-#PARAM_DIR = params_obot_g474
-
 CONFIG=osa14
 CONFIG_FILE = config/config_obot_g474_$(CONFIG).cpp
+ifndef PARAM
 PARAM=$(CONFIG)
+endif
 PARAM_FILE = param/param_obot_g474_$(PARAM).c
 
 
 TARGET = $(CONFIG)
-
-ifeq ($(CONFIG), osa14)
-override C_DEFS += -DSCOPE_DEBUG
-endif
 
 TARGET_MCU := stm32g474
 
@@ -27,12 +23,4 @@ export
 include ../motorlib/scripts/configure_gcc.mk
 include ../motorlib/scripts/configure.mk
 include ../motorlib/scripts/build.mk
-
-#include ../motorlib/scripts/make_param.mk
-
-# $(PARAM_DIR): $(BUILD_DIR)
-# 	$(MAKE) -C $(PARAM_DIR)
-
-# .PHONY: $(PARAM_DIR)
-
 
